# bundlewrap-repo-mirror

./: .editorconfig  .envrc  .gitignore  AGENTS.md  README.md  groups.py  hass_get_temp.py  nodes.py  pyproject.toml  requirements.txt
bundles/: AGENTS.md  AGENTS.template.md
data/: AGENTS.md  mailserver.sql  network.py
doc/: test_protect.service  test_protect_2.service  test_temp.service
groups/: AGENTS.md  all.py
hooks/: AGENTS.md  known_hosts.py  skip_local_nodes.py  test_ptr_records.py  unique_node_ids.py  wake_on_lan.py
items/: AGENTS.md  download.py  zfs_dataset.py  zfs_pool.py
libs/: AGENTS.md  apt.py  bind.py  derive_string.py  dns.py  dnssec.py  grafana.py  hashable.py  hmac.py  htpasswd.py  ini.py  ip.py  keys.py  local.py  nextcloud.py  nginx.py  postgres.py  rsa.py  ssh.py  systemd.py  tools.py  version.py  wireguard.py  wol.py
nodes/: AGENTS.md  client1.py  gameserver.py  home.backups.py  home.bootshorn-laptop.py  home.homeassistant.py  home.homematic.py  home.hue.py  home.openhab.py  home.openhab3.py  home.rack-switch-10g.py  home.router.py  home.rufbereitschaft.py  home.server.py  home.stromzaehler.py  home.switch-rack-10g.py  home.switch-rack-poe.py  home.switch-vorratsraum-poe.py  home.switch-wohnzimmer-10g.py  home.unifi.py  home.wohnzimmer-switch-10g.py  homeserver.py  htz.games-2.py  htz.games.py  htz.l4d2.py_  htz.mails.py  macbook.py  mailserver.py  mseibert.freescout.py  mseibert.mailman.py  mseibert.mailman.py_  mseibert.n8n.py  mseibert.yourls.py  netcup.mails.py  netcup.secondary.py  ovh.left4me.py  ovh.secondary.py  (+1 more)
(+565 files in other folders)
